--- a/style.css
+++ b/style.css
@@ -40,3 +40,16 @@ label span {
 
   text-align: center;
 }
+
+#filter {
+  background-color: orange;
+  color: white;
+  height: 70px;
+  width: 70px;
+  border-radius: 100%;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+}
+
+
